--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                     <p>고양시의 아름다운 문화유산을 찾아서</p>
                                 </div>
                             </a>
-                            </li>
+                        </li>
                         <li class="slide2">
                             <a href="#">
                                 <div class="slideTxt slideTxt2">
@@ -122,19 +122,54 @@
             <h3>이색전시관</h3>
             <div id="cont2slideWrap">
                 <ul>
-                    <li><a href="#">전시관1</a></li>
-                    <li><a href="#">전시관2</a></li>
-                    <li><a href="#">전시관3</a></li>
-                    <li><a href="#">전시관4</a></li>
-                    <li><a href="#">전시관5</a></li>
-                    <li><a href="#">전시관6</a></li>
-                    <li><a href="#">전시관7</a></li>
-                    <li><a href="#">전시관8</a></li>
+                    <li class="slide1"><a href="#">
+                        <p><span>고양 아람미술관</span><br>
+                            고양시 최대 규모 미술전시관인 아람미술관은 이동형 벽면을 도입한 1,300㎡ 크기의 최첨단 공간입니다.
+                        </p>
+                    </a></li>
+                    <li class="slide2"><a href="#">
+                        <p><span>갤러리 '가온'</span><br>
+                            일산동구청 유휴 공간인 2층을 활용해 운영중인 "갤러리 가온"은 2012년 7월 고양시 관공서 최초로 전시를 시작했으며, 일산동구청을 시작으로 고양시청과 덕양구청이 공공 갤러리관을 운영중에 있습니다. 
+                        </p>
+                    </a></li>
+                    <li class="slide3"><a href="#">
+                        <p><span>갤러리 '꿈'</span><br>
+                            덕양구청 꿈 갤러리는 구청 청사를 방문한 고양시민 및 직원들에게 그림, 글씨, 사진 등의 다채로운 볼거리를 제공함으로써 바쁜 일상 속의 여유를 선사해주는 문화·예술공간입니다. 
+                        </p>
+                    </a></li>
+                    <li class="slide4"><a href="#">
+                        <p><span>아쿠아플라넷</span><br>
+                            '아쿠아'는 바다의 웅장함, 그리고 해양과학과 인간의 만남을 뜻하며, ‘플라넷’은 여기서만 느낄 수 있는 첨단과학의 컨셉트를 관람객이 직접 우주행성을 탐험하듯 즐기게 한다는 의미를 가지고 있습니다.
+                        </p>
+                    </a></li>
+                    <li class="slide5"><a href="#">
+                        <p><span>테마동물원 쥬쥬</span><br>
+                            테마동물원 쥬쥬는 현재 150여 종의 다양한 동물들을
+                            만나볼 수 있는 생태공원으로 가족종합휴양시설로서의 발돋움을 하고 있습니다.
+                        </p>
+                    </a></li>
+                    <li class="slide6"><a href="#">
+                        <p><span>항공우주박물관</span><br>
+                            항공우주박물관은 유물 전시를 위주로 하는 기존 박물관의 고루한 개념에서 벗어나, 과학적 이해와 간접 체험을 위주로 전시 내용을 구성하였습니다.
+                        </p>
+                    </a></li>
+                    <li class="slide7"><a href="#">
+                        <p><span>증권박물관</span><br>
+                            증권박물관은 스위스 증권박물관에 이어 세계에서 두 번째로 개관한 국내 유일의 증권 전문 박물관입니다.
+                        </p>
+                    </a></li>
+                    <li class="slide8"><a href="#">
+                        <p><span>유진민속박물관</span><br>
+                            유진민속박물관은 2009년에 개관하였으며, 전통문화관련 민속품 전시와 체험공간이 마련되어 있다.
+                        </p>
+                    </a></li>
                 </ul>
             </div>
             <!-- 사진에 호버했을 때 사진 커지는 애니메이션 -->
-            <a href="#" class="cont2_prev">이전</a>
-            <a href="#" class="cont2_next">다음</a>
+            <ul id="cont2_btn">
+                <li><a href="#" class="cont2_prev">이전</a></li>
+                <li><a href="#" class="cont2_next">다음</a></li>
+            </ul>
         </section>
 
         <p id="banner">
@@ -154,8 +189,10 @@
                 <ul id="cont3_notice">
                     <li><a href="#"><span>1.&nbsp;&nbsp;</span>2020년 행주산성 해맞이 행사</a>2020.1.1</li>
                     <li><a href="#"><span>2.&nbsp;&nbsp;</span>항일음악회 - 3.1운동 및 대한민국 임시정부 수립 100주년 기념</a>2019.4.1</li>
-                    <li><a href="#"><span>3.&nbsp;&nbsp;</span>2019 생생문화제(밤가시초가의 봄,여름,가을,겨울)</a>2019.4.14~2019.10.30</li>
-                    <li><a href="#"><span>4.&nbsp;&nbsp;</span>문화재 사랑 글짓기 공모전 안내(소중한 문화재 우리가 지켜요!)</a>2018.12.1~2018.12.31</li>
+                    <li><a href="#"><span>3.&nbsp;&nbsp;</span>2019 생생문화제(밤가시초가의 봄,여름,가을,겨울)</a>2019.4.14~2019.10.30
+                    </li>
+                    <li><a href="#"><span>4.&nbsp;&nbsp;</span>문화재 사랑 글짓기 공모전 안내(소중한 문화재 우리가
+                            지켜요!)</a>2018.12.1~2018.12.31</li>
                     <li><a href="#"><span>5.&nbsp;&nbsp;</span>고양사이버박물관과 함께하는 역사기행</a>2018.10.13</li>
                 </ul>
                 <a href="#">+more</a>
@@ -169,11 +206,7 @@
             </hgroup>
             <div id="cont4slideWrap">
                 <ul>
-                    <li><a href="#">영상1</a></li>
-                    <li><a href="#">영상2</a></li>
-                    <li><a href="#">영상3</a></li>
-                    <li><a href="#">영상4</a></li>
-                    <li><a href="#">영상5</a></li>
+                    <!-- 제이쿼리에서 추가 -->
                 </ul>
             </div>
 
@@ -189,58 +222,84 @@
         </section>
 
         <section id="content5">
-            <h2 class="hidden">고양역사이야기,문화체험,소셜기자단</h2>
-            <ul>
-                <li>
+            <h2 class="hidden">주요게시판 바로가기</h2>
+            <section id="cont5_1">
+                <div class="cont5_1Wrap">
                     <h3>고양 역사이야기</h3>
                     <ul>
                         <li><a href="#">- 고양팔경(삼각산8경)</a></li>
                         <li><a href="#">- 426주년 고양 행주대첩제 이야기</a></li>
                         <li><a href="#">- 2019년, 고양의 역사 이야기(베스트 5)</a></li>
                     </ul>
-                    <a href="#">more</a>
-                </li>
-                <li>
+                    <a href="#">+more</a>
+                </div>
+
+                <div class="cont5_1Wrap">
                     <h3>문화체험</h3>
                     <ul>
                         <li><a href="#">- 고양시 관내 전시관 및 문화재 임시 휴관 안내</a></li>
                         <li><a href="#">- 2020년 행주산성 해맞이 특별개방</a></li>
                         <li><a href="#">- 2020년 행주산성 해맞이 행사</a></li>
                     </ul>
-                    <a href="#">more</a>
-                </li>
-                <li>
+                    <a href="#">+more</a>
+                </div>
+
+                <div class="cont5_1Wrap">
+
                     <h3>소셜 기자단</h3>
                     <ul>
                         <li><a href="#">- 고양 문화의 중심 어울림 누리</a></li>
                         <li><a href="#">- 고양시청갤려리 600 꼼꼼히 살펴보기!</a></li>
                         <li><a href="#">- 고양 가와지볍씨 박물관</a></li>
                     </ul>
-                    <a href="#">more</a>
-                </li>
-            </ul>
+                    <a href="#">+more</a>
+
+                </div>
+            </section>
+            <section id="cont5_2">
+                <h3>관리부서 안내</h3>
+                <dl>
+                    <dt>고양시 문화예술과 문화유산팀</dt>
+                    <dt>관련문의 : 038-8075-3395</dt>
+                    <dt><img src="./images/ft_cq.png" alt="공공저작권 자유이용허락"></dt>
+                </dl>
+            </section>
         </section>
     </main>
+
     <aside id="aside">
         <h2 class="hidden">사회숙제,동영상,역사이야기</h2>
-        <ul>
+        <ul id="asideMenu">
             <li><a href="#">사회숙제</a></li>
             <li><a href="#">동영상</a></li>
             <li><a href="#">역사이야기</a></li>
         </ul>
-        <a id="sitemap">사이트맵</a>
+        <ul id="asideBtn">
+            <li><a href="#" class="sitemap">사이트맵</a></li>
+            <li><a href="#" class="top">top</a></li>
+        </ul>
+
     </aside>
     <footer id="footer">
-        <ul>
-            <li><a href="#">이용안내</a></li>
-            <li><a href="#">저작권정책</a></li>
-            <li><a href="#">개인정보처리방침</a></li>
-        </ul>
-        <p>(10460)경기도 고양시 덕양구 고양시청로 10</p>
-        <address><strong>민원콜센터(시청):</strong>031-909-9000
-            <span><strong>수화상담(경기도):</strong>070-7947-3393</span></address>
+        <div id="footerWrap1">
+            <ul>
+                <li><a href="#">이용안내</a></li>
+                <li><a href="#">저작권정책</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+            </ul>
+        </div>
+        <div id="footerWrap2">
+            <p>(10460)경기도 고양시 덕양구 고양시청로 10</p>
+            <address><strong>민원콜센터(시청):</strong>031-909-9000
+                <span><strong>수화상담(경기도):</strong>070-7947-3393</span>
+            </address>
         <small>copyright&copy;2017 Goyancity All Rights Reserved</small>
-        <a href="#">유튜브로 이동</a>
+        </div>
+        <ul id="footerBtn">
+            <li><a href="#">유튜브로 이동</a></li>
+            <li><a href="#">페이스북으로 이동</a></li>
+            <li><a href="#">트위터로 이동</a></li>
+        </ul>
     </footer>
 </body>
 
