--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <script src="./jquery-3.6.0.min.js"></script>
     <script src="./common.js"></script>
     <link href="./common.css" rel="stylesheet">
     <title>고양사이버역사박물관</title>
