--- a/index.html
+++ b/index.html
@@ -123,47 +123,79 @@
             <h3>이색전시관</h3>
             <div id="cont2slideWrap">
                 <ul>
-                    <li class="slide1"><a href="#">
-                        <p><span>고양 아람미술관</span><br>
-                            고양시 최대 규모 미술전시관인 아람미술관은 이동형 벽면을 도입한 1,300㎡ 크기의 최첨단 공간입니다.
-                        </p>
-                    </a></li>
-                    <li class="slide2"><a href="#">
-                        <p><span>갤러리 '가온'</span><br>
-                            일산동구청 유휴 공간인 2층을 활용해 운영중인 "갤러리 가온"은 2012년 7월 고양시 관공서 최초로 전시를 시작했으며, 일산동구청을 시작으로 고양시청과 덕양구청이 공공 갤러리관을 운영중에 있습니다. 
-                        </p>
-                    </a></li>
-                    <li class="slide3"><a href="#">
-                        <p><span>갤러리 '꿈'</span><br>
-                            덕양구청 꿈 갤러리는 구청 청사를 방문한 고양시민 및 직원들에게 그림, 글씨, 사진 등의 다채로운 볼거리를 제공함으로써 바쁜 일상 속의 여유를 선사해주는 문화·예술공간입니다. 
-                        </p>
-                    </a></li>
-                    <li class="slide4"><a href="#">
-                        <p><span>아쿠아플라넷</span><br>
-                            '아쿠아'는 바다의 웅장함, 그리고 해양과학과 인간의 만남을 뜻하며, ‘플라넷’은 여기서만 느낄 수 있는 첨단과학의 컨셉트를 관람객이 직접 우주행성을 탐험하듯 즐기게 한다는 의미를 가지고 있습니다.
-                        </p>
-                    </a></li>
-                    <li class="slide5"><a href="#">
-                        <p><span>테마동물원 쥬쥬</span><br>
-                            테마동물원 쥬쥬는 현재 150여 종의 다양한 동물들을
-                            만나볼 수 있는 생태공원으로 가족종합휴양시설로서의 발돋움을 하고 있습니다.
-                        </p>
-                    </a></li>
-                    <li class="slide6"><a href="#">
-                        <p><span>항공우주박물관</span><br>
-                            항공우주박물관은 유물 전시를 위주로 하는 기존 박물관의 고루한 개념에서 벗어나, 과학적 이해와 간접 체험을 위주로 전시 내용을 구성하였습니다.
-                        </p>
-                    </a></li>
-                    <li class="slide7"><a href="#">
-                        <p><span>증권박물관</span><br>
-                            증권박물관은 스위스 증권박물관에 이어 세계에서 두 번째로 개관한 국내 유일의 증권 전문 박물관입니다.
-                        </p>
-                    </a></li>
-                    <li class="slide8"><a href="#">
-                        <p><span>유진민속박물관</span><br>
-                            유진민속박물관은 2009년에 개관하였으며, 전통문화관련 민속품 전시와 체험공간이 마련되어 있다.
-                        </p>
-                    </a></li>
+                    <li class="slide1">
+                        <div>
+                            <a href="#">
+                                <p><span>고양 아람미술관</span><br>
+                                    고양시 최대 규모 미술전시관인 아람미술관은 이동형 벽면을 도입한 1,300㎡ 크기의 최첨단 공간입니다.
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide2">
+                        <div>
+                            <a href="#">
+                                <p><span>갤러리 '가온'</span><br>
+                                    일산동구청 유휴 공간인 2층을 활용해 운영중인 "갤러리 가온"은 2012년 7월 고양시 관공서 최초로 전시를 시작했으며, 일산동구청을 시작으로 고양시청과 덕양구청이 공공 갤러리관을 운영중에 있습니다. 
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide3">
+                        <div>
+                            <a href="#">
+                                <p><span>갤러리 '꿈'</span><br>
+                                    덕양구청 꿈 갤러리는 구청 청사를 방문한 고양시민 및 직원들에게 그림, 글씨, 사진 등의 다채로운 볼거리를 제공함으로써 바쁜 일상 속의 여유를 선사해주는 문화·예술공간입니다. 
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide4">
+                        <div>
+                            <a href="#">
+                                <p><span>아쿠아플라넷</span><br>
+                                    '아쿠아'는 바다의 웅장함, 그리고 해양과학과 인간의 만남을 뜻하며, ‘플라넷’은 여기서만 느낄 수 있는 첨단과학의 컨셉트를 관람객이 직접 우주행성을 탐험하듯 즐기게 한다는 의미를 가지고 있습니다.
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide5">
+                        <div>
+                            <a href="#">
+                                <p><span>테마동물원 쥬쥬</span><br>
+                                    테마동물원 쥬쥬는 현재 150여 종의 다양한 동물들을
+                                    만나볼 수 있는 생태공원으로 가족종합휴양시설로서의 발돋움을 하고 있습니다.
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide6">
+                        <div>
+                            <a href="#">
+                                <p><span>항공우주박물관</span><br>
+                                    항공우주박물관은 유물 전시를 위주로 하는 기존 박물관의 고루한 개념에서 벗어나, 과학적 이해와 간접 체험을 위주로 전시 내용을 구성하였습니다.
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide7">
+                        <div>
+                            <a href="#">
+                                <p><span>증권박물관</span><br>
+                                    증권박물관은 스위스 증권박물관에 이어 세계에서 두 번째로 개관한 국내 유일의 증권 전문 박물관입니다.
+                                </p>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="slide8">
+                        <div>
+                            <a href="#">
+                                <p><span>유진민속박물관</span><br>
+                                    유진민속박물관은 2009년에 개관하였으며, 전통문화관련 민속품 전시와 체험공간이 마련되어 있습니다.
+                                </p>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <!-- 사진에 호버했을 때 사진 커지는 애니메이션 -->
@@ -214,7 +246,7 @@
             <div id="cont4_btn1">
                 <a href="#" class="cont4_on">1</a>
                 <a href="#">2</a>
-                <li><a href="#">3</a>
+                <a href="#">3</a>
             </div>
             <div id="cont4_btn2">
                 <a href="#" class="cont5_prev">prev</a>
