--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                             <li><a href="#">e-book3</a></li>
                             <li><a href="#">e-book4</a></li>
                             <li><a href="#">e-book5</a></li>
+                            <li><a href="#">e-book6</a></li>
+                            <li><a href="#">e-book7</a></li>
+                            <li><a href="#">e-book8</a></li>
                             <!-- 나중에 늘리기... -->
                         </ul>
                     </div>
@@ -205,9 +208,18 @@
             </ul>
         </section>
 
-        <p id="banner">
+        <!-- <p id="banner">
             <a href="#">가와지볍씨 박물관</a>
-        </p>
+        </p> -->
+        <div id="banner">
+            <p>
+                한반도 최고의 재배 볍씨<span>, 한강 농경문화의 중심을 밝히다</span>
+            </p>
+            <p>
+                <span>가와지볍씨</span>박물관
+            </p>
+            <a href="#">박물관 바로가기</a>
+        </div>
 
         <section id="content3">
             <h2 class="hidden">함께할 고양</h2>
