--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                     <a href="#" id="main_book">main_book</a>
                     <div id="cont1_2_slideWrap">
                         <ul id="bookWrap">
-                            <li><a href="#">e-book1</a></li>
-                            <li><a href="#">e-book2</a></li>
-                            <li><a href="#">e-book3</a></li>
-                            <li><a href="#">e-book4</a></li>
-                            <li><a href="#">e-book5</a></li>
-                            <li><a href="#">e-book6</a></li>
-                            <li><a href="#">e-book7</a></li>
-                            <li><a href="#">e-book8</a></li>
+                            <li><a href="#">역사가 담긴 고양 북한산 답사길</a></li>
+                            <li><a href="#">고양의 문화유산</a></li>
+                            <li><a href="#">가와지 볍씨 자료실</a></li>
+                            <li><a href="#">고양의 역사와 인물</a></li>
+                            <li><a href="#">고양의 지명이야기</a></li>
+                            <li><a href="#">사진으로 보는 고양의 문화유산</a></li>
+                            <li><a href="#">우리 마을 고양의 문화재 이야기</a></li>
+                            <li><a href="#">길- 고양 문화유산 이야기</a></li>
                             <!-- 나중에 늘리기... -->
                         </ul>
                     </div>
@@ -252,6 +252,21 @@
             <div id="cont4slideWrap">
                 <ul>
                     <!-- 제이쿼리에서 추가 -->
+                    <li><a href='#' class='video1'>북한산</a></li>
+                    <li><a href='#' class='video2'>고양 북한산성 답사기</a></li>
+                    <li><a href='#' class='video3'>5천년 역사의 씨앗 고양 가와지볍씨</a></li>
+                    <li><a href='#' class='video4'>고양 문화유산이야기4 - 옛길에서 만나는 문화유산2</a></li>
+                    <li><a href='#' class='video5'>고양북한산의 아름다움을 담다</a></li>
+                    <li><a href='#' class='video6'>고양 문화유산이야기3 - 고봉산기슭, 문화유산을 찾다2</a></li>
+                    <li><a href='#' class='video7'>고양 문화유산이야기2 - 한강, 고양의 역사와 함께 흐르다2</a></li>
+                    <li><a href='#' class='video8'>고양 문화유산이야기1 - 북한산 문화유산에 오르다2</a></li>
+                    <li><a href='#' class='video9'>고양 문화유산이야기4 - 옛길에서 만나는 문화유산1</a></li>
+                    <li><a href='#' class='video10'>고양 문화유산이야기3 - 고봉산기슭, 문화유산을 찾다1</a></li>
+                    <li><a href='#' class='video11'>고양 문화유산이야기2 - 한강, 고양의 역사와 함께 흐르다1</a></li>
+                    <li><a href='#' class='video12'>고양 문화유산이야기1 - 북한산 문화유산에 오르다41/a></li>
+                    <li><a href='#' class='video13'>고양의 독립운동 이야기</a></li>
+                    <li><a href='#' class='video14'>고양의 독립운동 현장을 찾다</a></li>
+                    <li><a href='#' class='video15'>고양의 독립운동가를 기억하다</a></li>
                 </ul>
             </div>
 
@@ -270,7 +285,7 @@
             <h2 class="hidden">주요게시판 바로가기</h2>
             <section id="cont5_1">
                 <div class="cont5_1Wrap">
-                    <h3>고양 역사이야기</h3>
+                    <h3>역사이야기</h3>
                     <ul>
                         <li><a href="#">- 고양팔경(삼각산8경)</a></li>
                         <li><a href="#">- 426주년 고양 행주대첩제 이야기</a></li>
