--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <li><a href='#' class='video9'>고양 문화유산이야기4 - 옛길에서 만나는 문화유산1</a></li>
                     <li><a href='#' class='video10'>고양 문화유산이야기3 - 고봉산기슭, 문화유산을 찾다1</a></li>
                     <li><a href='#' class='video11'>고양 문화유산이야기2 - 한강, 고양의 역사와 함께 흐르다1</a></li>
-                    <li><a href='#' class='video12'>고양 문화유산이야기1 - 북한산 문화유산에 오르다41/a></li>
+                    <li><a href='#' class='video12'>고양 문화유산이야기1 - 북한산 문화유산에 오르다1</a></li>
                     <li><a href='#' class='video13'>고양의 독립운동 이야기</a></li>
                     <li><a href='#' class='video14'>고양의 독립운동 현장을 찾다</a></li>
                     <li><a href='#' class='video15'>고양의 독립운동가를 기억하다</a></li>
@@ -318,11 +318,11 @@
             </section>
             <section id="cont5_2">
                 <h3>관리부서 안내</h3>
-                <dl>
-                    <dt>고양시 문화예술과 문화유산팀</dt>
-                    <dt>관련문의 : 038-8075-3395</dt>
-                    <dt><img src="./images/ft_cq.png" alt="공공저작권 자유이용허락"></dt>
-                </dl>
+                <ul>
+                    <li>고양시 문화예술과 문화유산팀</li>
+                    <li>관련문의 : 038-8075-3395</li>
+                    <li><img src="./images/ft_cq.png" alt="공공저작권 자유이용허락"></li>
+                </ul>
             </section>
         </section>
     </main>
