--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="http://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <script src="jquery-3.6.0.min.js"></script>
+    <!-- <script src="slick.min.js"></script> -->
     <script src="common.js"></script>
     <link href="common.css" rel="stylesheet">
     <title>고양사이버역사박물관</title>
